<resources>
    <string name="app_name">My Todolist</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="task_title">Title</string>
    <string name="task_description">Description</string>
    <string name="task_due_date">Due date</string>
    <string name="task_save">Save Task</string>
    <string name="task_cancel">Cancel</string>
    <string name="task_saved">Task Saved</string>
    <string name="nothing_to_do">Nothing to do. Enjoy!</string>
</resources>